--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable(
         ql_performance_testing
-        ql_performance_testing.cpp)
+        ql_calendar_testing.cpp ql_calendar_testing.hpp
+        benchmark_main.cpp
+)
