Added Benchmark Xoshiro256StarStarRng vs. MersenneTwisterUniformRng

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(
         ql_performance_testing
         ql_calendar_testing.cpp ql_calendar_testing.hpp
+        ql_xoshiro256starstarrng_benchmarking.cpp ql_xoshiro256starstarrng_benchmarking.hpp
         benchmark_main.cpp
 )
