--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -33,25 +33,45 @@ runs:
           ${{ inputs.os }}-${{ inputs.cxx }}--${{ github.job }}
           ${{ inputs.os }}-${{ inputs.cxx }}
           ${{ inputs.os }}
-        variant: ${{ steps.determine-ccache-variant.outputs.ccache-variant }}
+        variant: ${{ env.CMAKE_CXX_COMPILER_LAUNCHER }}
+
+    - name: Setup Linux variables
+      if: runner.os == 'Linux'
+      shell: bash
+      run: |
+        echo "/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin"                                                           >> $GITHUB_PATH
 
     - name: Setup Linux
       if: runner.os == 'Linux'
       shell: bash
       run: |
-        sudo apt update
-        sudo apt install ninja-build
+        sudo apt-get update
+        sudo apt-get install -y ccache ninja-build
+
+        brew update
+        brew install boost
 
     - name: Setup macOS
       if: runner.os == 'macOS'
       shell: bash
       run: |
-        brew install ninja
+        brew install ninja boost
+
+    - name: Setup Windows variables
+      if: runner.os == 'Windows'
+      shell: pwsh
+      run: |
+        Write "BOOST_DOWNLOAD_URI=https://downloads.sourceforge.net/project/boost/boost-binaries/1.85.0/boost_1_85_0-msvc-14.3-64.exe"  >> $env:GITHUB_ENV
+        Write "BOOST_INSTALLER_PATH=$env:RUNNER_TEMP\boost.exe"                                                                         >> $env:GITHUB_ENV
+        Write "BOOST_ROOT=$env:RUNNER_TEMP\boost"                                                                                       >> $env:GITHUB_ENV
 
     - name: Setup Windows
       if: runner.os == 'Windows'
       shell: pwsh
       run: |
+        Start-BitsTransfer -Source $env:BOOST_DOWNLOAD_URI -Destination $env:BOOST_INSTALLER_PATH
+        Start-Process -Wait -FilePath "$env:BOOST_INSTALLER_PATH" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=$env:BOOST_ROOT"
+
         choco install -y ninja
 
     - name: Set up Visual Studio shell on Windows
