--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
-cmake_minimum_required(VERSION 3.22.0)
+cmake_minimum_required(VERSION 3.25.0)
 
 # For MSVC RUNTIME LIBRARY, need CMP0091=NEW and cmake 3.15+
 cmake_policy(SET CMP0091 NEW)
 
 project(ql_performance_testing VERSION 0.0.1)
+
+# Options
+option(RKE_COMPILE_WARNING_AS_ERROR "Specify whether to treat warnings on compile as errors (not used for the external libraries Benchmark and QuantLib). Default is ON" ON)
 
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
