Fix and update failing 'Apply clang-tidy fixes' workflow

--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   clang-tidy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
         with:
@@ -18,10 +18,14 @@ jobs:
           sudo apt update
           sudo apt install -y clang-tidy ninja-build
 
+          brew update
+          brew install boost
+
       - name: Running clang-tidy
         run: |
-          cmake -S . -B ./build -G Ninja -DRKE_USE_CLANG_TIDY=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-          cmake --build ./build -j 1 -v
+          cmake --version
+          cmake         --preset clang-tidy -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+          cmake --build --preset clang-tidy -j 1 -v
 
       - uses: peter-evans/create-pull-request@v7
         with:
