--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -53,16 +53,17 @@ runs:
       if: runner.os == 'Windows'
       shell: pwsh
       run: |
-        Write "BOOST_DOWNLOAD_URI=https://downloads.sourceforge.net/project/boost/boost-binaries/1.85.0/boost_1_85_0-msvc-14.3-64.exe"  >> $env:GITHUB_ENV
+        Write "BOOST_DOWNLOAD_URI=https://downloads.sourceforge.net/project/boost/boost-binaries/1.88.0/boost_1_88_0-msvc-14.3-64.exe"  >> $env:GITHUB_ENV
         Write "BOOST_INSTALLER_PATH=$env:RUNNER_TEMP\boost.exe"                                                                         >> $env:GITHUB_ENV
-        Write "BOOST_ROOT=$env:RUNNER_TEMP\boost"                                                                                       >> $env:GITHUB_ENV
+        Write "BOOST_INSTALL_DIR=$env:RUNNER_TEMP\boost"                                                                                >> $env:GITHUB_ENV
+        Write "Boost_DIR=$env:RUNNER_TEMP\boost\lib64-msvc-14.3\cmake\Boost-1.88.0"                                                     >> $env:GITHUB_ENV                                                                                 >> $env:GITHUB_ENV
 
     - name: Setup Windows
       if: runner.os == 'Windows'
       shell: pwsh
       run: |
         Start-BitsTransfer -Source $env:BOOST_DOWNLOAD_URI -Destination $env:BOOST_INSTALLER_PATH
-        Start-Process -Wait -FilePath "$env:BOOST_INSTALLER_PATH" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=$env:BOOST_ROOT"
+        Start-Process -Wait -FilePath "$env:BOOST_INSTALLER_PATH" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=$env:BOOST_INSTALL_DIR"
 
         choco install -y ninja
 
