--- a/.github/workflows/clang-format-lint.yml
+++ b/.github/workflows/clang-format-lint.yml
@@ -1,13 +1,13 @@
 name: Apply clang-format fixes
 
 on:
-  push: { }
-  pull_request: { }
+  # push: { }
+  # pull_request: { }
   workflow_dispatch: { }
 
 jobs:
   clang-format:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     steps:
       - uses: actions/checkout@v4
