--- a/.github/workflows/cmake-and-ctest.yml
+++ b/.github/workflows/cmake-and-ctest.yml
@@ -35,7 +35,7 @@ jobs:
             { os: ubuntu-24.04, cc: gcc-14,   cxx: g++-14 },
 
             { os: windows-2019, cc: cl,       cxx: cl },
-            { os: windows-2022, cc: cl,       cxx: cl }
+            { os: windows-2022, cc: cl,       cxx: cl },
             { os: windows-2025, cc: cl,       cxx: cl }
           ]
         cxx-standard: [ 17, 20, 23 ]
