--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -56,7 +56,7 @@ runs:
         Write "BOOST_DOWNLOAD_URI=https://downloads.sourceforge.net/project/boost/boost-binaries/1.88.0/boost_1_88_0-msvc-14.3-64.exe"  >> $env:GITHUB_ENV
         Write "BOOST_INSTALLER_PATH=$env:RUNNER_TEMP\boost.exe"                                                                         >> $env:GITHUB_ENV
         Write "BOOST_INSTALL_DIR=$env:RUNNER_TEMP\boost"                                                                                >> $env:GITHUB_ENV
-        Write "Boost_DIR=$env:RUNNER_TEMP\boost\lib64-msvc-14.3\cmake\Boost-1.88.0"                                                     >> $env:GITHUB_ENV                                                                                 >> $env:GITHUB_ENV
+        Write "Boost_DIR=$env:RUNNER_TEMP\boost\lib64-msvc-14.3\cmake\Boost-1.88.0"                                                     >> $env:GITHUB_ENV
 
     - name: Setup Windows
       if: runner.os == 'Windows'
