--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_policy(SET CMP0091 NEW)
 project(ql_performance_testing VERSION 0.0.1)
 
 # Options
-option(RKE_COMPILE_WARNING_AS_ERROR "Specify whether to treat warnings on compile as errors (not used for the external libraries Benchmark and QuantLib). Default is ON" ON)
+option(CMAKE_COMPILE_WARNING_AS_ERROR "Compile warnings as errors" ON)
 
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
