Use only c++ standard 17

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -12,6 +12,10 @@ inputs:
     description: The c++ compiler to use.
     required: true
 
+  cxx-standard:
+    description: The c++ standard to use.
+    required: true
+
 runs:
   using: composite
   steps:
@@ -76,9 +80,10 @@ runs:
     - name: Setup CCache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: ${{ inputs.os }}-${{ inputs.cxx }}--${{ github.job }}
+        key: ${{ inputs.os }}-${{ inputs.cxx }}-${{ inputs.cxx-standard }}--${{ github.job }}
         restore-keys: |
-          ${{ inputs.os }}-${{ inputs.cxx }}--${{ github.job }}
+          ${{ inputs.os }}-${{ inputs.cxx }}-${{ inputs.cxx-standard }}--${{ github.job }}
+          ${{ inputs.os }}-${{ inputs.cxx }}-${{ inputs.cxx-standard }}
           ${{ inputs.os }}-${{ inputs.cxx }}
           ${{ inputs.os }}
         variant: ${{ env.CMAKE_CXX_COMPILER_LAUNCHER }}
