--- a/.github/workflows/cmake-and-ctest.yml
+++ b/.github/workflows/cmake-and-ctest.yml
@@ -38,7 +38,7 @@ jobs:
             { os: windows-2022, cc: cl,       cxx: cl },
             { os: windows-2025, cc: cl,       cxx: cl }
           ]
-        cxx-standard: [ 17, 20, 23 ]
+        cxx-standard: [ 17 ]
         cmake-preset: [ release ]
 
     runs-on: ${{ matrix.settings.os }}
@@ -54,6 +54,7 @@ jobs:
         with:
           os:                           ${{ matrix.settings.os }}
           cxx:                          ${{ matrix.settings.cxx }}
+          cxx-standard:                 ${{ matrix.cxx-standard }}
 
       - name: Configure CMake and Build
         env:
