--- a/.github/workflows/cmake-and-ctest.yml
+++ b/.github/workflows/cmake-and-ctest.yml
@@ -3,8 +3,8 @@ name: Build and Test with CMake and CTest
 on:
   push: { }
   pull_request: { }
-  schedule:
-    - cron: '30 4 * * *'
+#  schedule:
+#    - cron: '30 4 * * *'
   workflow_dispatch: { }
 
 jobs:
@@ -14,28 +14,31 @@ jobs:
       matrix:
         settings:
           [
-            { os: macos-12,     cc: clang,    cxx: clang++ },
             { os: macos-13,     cc: clang,    cxx: clang++ },
-
-            { os: ubuntu-20.04, cc: clang-10, cxx: clang++-10 },
-            { os: ubuntu-20.04, cc: clang-11, cxx: clang++-11 },
-            { os: ubuntu-20.04, cc: clang-12, cxx: clang++-12 },
+            { os: macos-14,     cc: clang,    cxx: clang++ },
+            { os: macos-15,     cc: clang,    cxx: clang++ },
 
             { os: ubuntu-22.04, cc: clang-13, cxx: clang++-13 },
             { os: ubuntu-22.04, cc: clang-14, cxx: clang++-14 },
+            { os: ubuntu-22.04, cc: clang-15, cxx: clang++-15 },
 
-            { os: ubuntu-20.04, cc: gcc-9,    cxx: g++-9 },
-            { os: ubuntu-20.04, cc: gcc-10,   cxx: g++-10 },
-
-            { os: ubuntu-22.04, cc: gcc-9,    cxx: g++-9 },
             { os: ubuntu-22.04, cc: gcc-10,   cxx: g++-10 },
             { os: ubuntu-22.04, cc: gcc-11,   cxx: g++-11 },
             { os: ubuntu-22.04, cc: gcc-12,   cxx: g++-12 },
 
+            { os: ubuntu-24.04, cc: clang-16, cxx: clang++-16 },
+            { os: ubuntu-24.04, cc: clang-17, cxx: clang++-17 },
+            { os: ubuntu-24.04, cc: clang-18, cxx: clang++-18 },
+
+            { os: ubuntu-24.04, cc: gcc-12,   cxx: g++-12 },
+            { os: ubuntu-24.04, cc: gcc-13,   cxx: g++-13 },
+            { os: ubuntu-24.04, cc: gcc-14,   cxx: g++-14 },
+
             { os: windows-2019, cc: cl,       cxx: cl },
-            { os: windows-2022, cc: cl,       cxx: cl }
+            { os: windows-2022, cc: cl,       cxx: cl },
+            { os: windows-2025, cc: cl,       cxx: cl }
           ]
-        cxx-standard: [ 17, 20 ]
+        cxx-standard: [ 17 ]
         cmake-preset: [ release ]
 
     runs-on: ${{ matrix.settings.os }}
@@ -46,29 +49,24 @@ jobs:
           submodules: "true"
 
       - name: Setup needed software
-
         id:                             setup
         uses:                           ./.github/actions/setup
         with:
           os:                           ${{ matrix.settings.os }}
           cxx:                          ${{ matrix.settings.cxx }}
-
+          cxx-standard:                 ${{ matrix.cxx-standard }}
 
       - name: Configure CMake and Build
-
         env:
           CC:                           ${{ matrix.settings.cc }}
           CXX:                          ${{ matrix.settings.cxx }}
           CMAKE_CONFIG_TYPE:            Release
-          CMAKE_CXX_COMPILER_LAUNCHER:  ${{ steps.setup.outputs.ccache-variant }}
         run: |
           cmake --version
           cmake --preset ${{ matrix.cmake-preset }} -DCMAKE_CXX_STANDARD=${{ matrix.cxx-standard }} -L
           cmake --build --preset ${{ matrix.cmake-preset }} --verbose
 
-
       - name: CTest
-
         run: |
           ctest --version
           ctest --preset ${{ matrix.cmake-preset }} --extra-verbose
