--- a/rke/testsuite/CMakeLists.txt
+++ b/rke/testsuite/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_executable(rke_ql_ext_testsuite testsuite.cpp
+add_executable(rke_ql_ext_testsuite
+        testsuite.cpp
         BonusClassicOption.cpp)
+
 target_link_libraries(rke_ql_ext_testsuite PUBLIC
         rke_ql_ext)
