Add MCBonusClassicEngine and testBonusClassicOptionValuation

--- a/rke/ql/ext/CMakeLists.txt
+++ b/rke/ql/ext/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(RKE_QL_EXT_SOURCES
         instruments/BonusClassicOption.cpp
+        pricingengines/bonusclassic/MCBonusClassicEngine.cpp
 )
 
 set(RKE_QL_EXT_HEADER
         Error.hpp
         instruments/BonusClassicOption.hpp
+        pricingengines/bonusclassic/MCBonusClassicEngine.hpp
 )
 
 add_library(rke_ql_ext STATIC
