--- a/rke/testsuite/CMakeLists.txt
+++ b/rke/testsuite/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_executable(rke_ql_ext_testsuite
         testsuite.cpp
-        BonusClassicOption.cpp)
+        BonusClassicOption.cpp
+        TestSuiteFixture.hpp
+        ../../external/QuantLib/test-suite/utilities.cpp
+        ../../external/QuantLib/test-suite/utilities.hpp)
 
 target_link_libraries(rke_ql_ext_testsuite PUBLIC
         rke_ql_ext)
