Benchmark BonusClassic certificates (#7)
* Setup new project structure

* Added TestSuiteFixture

* Update to runner-latest and cxx-standard: [ 17, 20, 23 ]

* Working on BonusClassicOption and the test

* Fix BonusClassicPayoff

* Add MCBonusClassicEngine and testBonusClassicOptionValuation

* Small enhancements

* Enabled CTest for rke_ql_ext_testsuite

* Working version of the MCBonusClassicEngine

* Add BenchmarkBonusClassicOption

* Use cmake preset version 9 which is inline with the supported VS version

* Update to latest QuantLib tag

* Fix error comparison of integer expressions of different signedness: ‘int’ and ‘QuantLib::Size’

* Enable QuantLib testing

* Fix unused function warning

* Fix test failure

* Fix unused function warning

* Disable QuantLib testing

* Re-enable QuantLib testing and schedule the build workflow

--- a/.github/workflows/cmake-and-ctest.yml
+++ b/.github/workflows/cmake-and-ctest.yml
@@ -3,8 +3,8 @@ name: Build and Test with CMake and CTest
 on:
   push: { }
   pull_request: { }
-#  schedule:
-#    - cron: '30 4 * * *'
+  schedule:
+    - cron: '33 5 * * *'
   workflow_dispatch: { }
 
 jobs:
@@ -14,31 +14,36 @@ jobs:
       matrix:
         settings:
           [
-            { os: macos-13,     cc: clang,    cxx: clang++ },
-            { os: macos-14,     cc: clang,    cxx: clang++ },
-            { os: macos-15,     cc: clang,    cxx: clang++ },
+            { os: macos-latest,   cc: clang,    cxx: clang++ },
+            { os: ubuntu-latest,  cc: clang,    cxx: clang++ },
+            { os: ubuntu-latest,  cc: gcc,      cxx: g++ },
+            { os: windows-latest, cc: cl,       cxx: cl }
 
-            { os: ubuntu-22.04, cc: clang-13, cxx: clang++-13 },
-            { os: ubuntu-22.04, cc: clang-14, cxx: clang++-14 },
-            { os: ubuntu-22.04, cc: clang-15, cxx: clang++-15 },
-
-            { os: ubuntu-22.04, cc: gcc-10,   cxx: g++-10 },
-            { os: ubuntu-22.04, cc: gcc-11,   cxx: g++-11 },
-            { os: ubuntu-22.04, cc: gcc-12,   cxx: g++-12 },
-
-            { os: ubuntu-24.04, cc: clang-16, cxx: clang++-16 },
-            { os: ubuntu-24.04, cc: clang-17, cxx: clang++-17 },
-            { os: ubuntu-24.04, cc: clang-18, cxx: clang++-18 },
-
-            { os: ubuntu-24.04, cc: gcc-12,   cxx: g++-12 },
-            { os: ubuntu-24.04, cc: gcc-13,   cxx: g++-13 },
-            { os: ubuntu-24.04, cc: gcc-14,   cxx: g++-14 },
-
-            { os: windows-2019, cc: cl,       cxx: cl },
-            { os: windows-2022, cc: cl,       cxx: cl },
-            { os: windows-2025, cc: cl,       cxx: cl }
+            # { os: macos-13,       cc: clang,    cxx: clang++ },
+            # { os: macos-14,       cc: clang,    cxx: clang++ },
+            # { os: macos-15,       cc: clang,    cxx: clang++ },
+            #
+            # { os: ubuntu-22.04,   cc: clang-13, cxx: clang++-13 },
+            # { os: ubuntu-22.04,   cc: clang-14, cxx: clang++-14 },
+            # { os: ubuntu-22.04,   cc: clang-15, cxx: clang++-15 },
+            #
+            # { os: ubuntu-22.04,   cc: gcc-10,   cxx: g++-10 },
+            # { os: ubuntu-22.04,   cc: gcc-11,   cxx: g++-11 },
+            # { os: ubuntu-22.04,   cc: gcc-12,   cxx: g++-12 },
+            #
+            # { os: ubuntu-24.04,   cc: clang-16, cxx: clang++-16 },
+            # { os: ubuntu-24.04,   cc: clang-17, cxx: clang++-17 },
+            # { os: ubuntu-24.04,   cc: clang-18, cxx: clang++-18 },
+            #
+            # { os: ubuntu-24.04,   cc: gcc-12,   cxx: g++-12 },
+            # { os: ubuntu-24.04,   cc: gcc-13,   cxx: g++-13 },
+            # { os: ubuntu-24.04,   cc: gcc-14,   cxx: g++-14 },
+            #
+            # { os: windows-2019,   cc: cl,       cxx: cl },
+            # { os: windows-2022,   cc: cl,       cxx: cl },
+            # { os: windows-2025,   cc: cl,       cxx: cl }
           ]
-        cxx-standard: [ 17 ]
+        cxx-standard: [ 17, 20, 23 ]
         cmake-preset: [ release ]
 
     runs-on: ${{ matrix.settings.os }}
@@ -49,18 +54,18 @@ jobs:
           submodules: "true"
 
       - name: Setup needed software
-        id:                             setup
-        uses:                           ./.github/actions/setup
+        id: setup
+        uses: ./.github/actions/setup
         with:
-          os:                           ${{ matrix.settings.os }}
-          cxx:                          ${{ matrix.settings.cxx }}
-          cxx-standard:                 ${{ matrix.cxx-standard }}
+          os: ${{ matrix.settings.os }}
+          cxx: ${{ matrix.settings.cxx }}
+          cxx-standard: ${{ matrix.cxx-standard }}
 
       - name: Configure CMake and Build
         env:
-          CC:                           ${{ matrix.settings.cc }}
-          CXX:                          ${{ matrix.settings.cxx }}
-          CMAKE_CONFIG_TYPE:            Release
+          CC: ${{ matrix.settings.cc }}
+          CXX: ${{ matrix.settings.cxx }}
+          CMAKE_CONFIG_TYPE: Release
         run: |
           cmake --version
           cmake --preset ${{ matrix.cmake-preset }} -DCMAKE_CXX_STANDARD=${{ matrix.cxx-standard }} -L
